// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskCheckbox renders correctly when task is COMPLETED 1`] = `
<ListItem
  button={true}
  className="makeStyles-listItem-1"
  component="li"
  disableGutters={true}
  onClick={[Function]}
>
  <ListItemIcon
    onClick={[Function]}
  >
    <TaskCheckbox
      onChange={[Function]}
      task={
        Object {
          "description": "New task description 2",
          "id": "1",
          "status": "COMPLETED",
          "title": "New task title 2",
        }
      }
    />
  </ListItemIcon>
  <ListItemText
    primary={
      <del>
        New task title 2
      </del>
    }
  />
  <ListItemIcon
    onClick={[Function]}
  >
    <TaskOptions
      id="1"
    />
  </ListItemIcon>
</ListItem>
`;

exports[`Component - TaskCheckbox renders correctly when task is UNCOMPLETED 1`] = `
<ListItem
  button={true}
  className="makeStyles-listItem-1"
  component="li"
  disableGutters={true}
  onClick={[Function]}
>
  <ListItemIcon
    onClick={[Function]}
  >
    <TaskCheckbox
      onChange={[Function]}
      task={
        Object {
          "description": "New task description",
          "id": "2",
          "status": "UNCOMPLETED",
          "title": "New task title ",
        }
      }
    />
  </ListItemIcon>
  <ListItemText
    primary={
      <strong>
        New task title 
      </strong>
    }
  />
  <ListItemIcon
    onClick={[Function]}
  >
    <TaskOptions
      id="2"
    />
  </ListItemIcon>
</ListItem>
`;
